# the-met-retrieval

./: .env.example  .gitignore  LICENSE  PLAN.md  README.md  explore_data.ipynb  pyproject.toml
backend/: main.py
backend/api/: persistence.py  train.py
backend/models/: lit_model.py
backend/pipeline/: download_images.py  features.py  geocode.py  ingest.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: ArtifactCard.tsx
frontend/src/pages/: About.tsx  Map.tsx  Search.tsx  Train.tsx
frontend/src/store/: index.ts
